--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ethereum-waffle": "^3.4.4",
     "ethers": "^5.6.9",
     "hardhat": "^2.9.9",
+    "hardhat-gas-reporter": "^1.0.9",
     "html-webpack-plugin": "^5.5.0",
     "ts-loader": "^9.4.1",
     "ts-node": "^10.8.1",
